--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
   font-family: Lato, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-  background: #0f172a;
+  background: #15181b;
   min-height: 100vh;
   margin: 0;
   color: #ffffff;
@@ -8,12 +8,13 @@ body {
   font-size: 100px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-align: middle;
 }
 
 .colored-line {
   border: none;
   margin-top: 0px;
-  height: 30px;
+  height: 50px;
   background-color: #5b1df0
 }
 
@@ -30,6 +31,8 @@ body {
   margin: 4px 2px;
   cursor: pointer;
 }
+
+
 :root {
   --main-spacing: 16px;
 }
