A lot completed, home stretch now
goated

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: middle;
+  padding: 50px;
 }
 
 .colored-line {
